--- a/foodhut/public_html/index.html
+++ b/foodhut/public_html/index.html
@@ -39,30 +39,32 @@
             </ul>
             <a class="navbar-brand m-auto" href="#">
                 <img src="assets/imgs/logo.svg" class="brand-img" alt="">
-                <span class="brand-txt">Food Hut</span>
+                <span class="brand-txt">Il Norteño</span>
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#blog">Blog<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#blog">Menu<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link" href="#testmonial">Reviews</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a href="components.html" class="btn btn-primary ml-xl-4">Components</a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </nav>
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">Food Hut</h1>
-            <h2 class="display-4 mb-5">Always fresh &amp; Delightful</h2>
-            <a class="btn btn-lg btn-primary" href="#gallary">View Our gallary</a>
+            <a class="navbar-brand m-auto" href="#">
+                <img src="assets/imgs/logo.svg" class="brand-img" alt="">
+                <span class="brand-txt">Il Norteño</span>
+            </a>
+            <a class="btn btn-lg btn-dark mb-5 mt-1" href="#blog">View Our Menu</a>
         </div>
     </header>
 
@@ -86,80 +88,106 @@
 
     <!--  gallary Section  -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">OUR MENU</h2>
+        <h2 class="section-title">OUR SPECIAL DISHES</h2>
     </div>
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-container">
+                <img src="assets/imgs/gallary-3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
+                <div class="gallary-overlay">
+                    <p style=" color: white;
+                    font-size: 1.2em;
+                    text-align: center;">Loren Ipsum <br> $ 45</p>
+                </div>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-2.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-4.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-5.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-6.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-7.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-8.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-9.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-10.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-11.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
             <img src="assets/imgs/gallary-12.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-            <a href="#" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
+            <div class="gallary-overlay">
+                <p style=" color: white;
+                font-size: 1.2em;
+                text-align: center;">Loren Ipsum <br> $ 45</p>
+            </div>
         </div>
     </div>
 
@@ -187,7 +215,7 @@
 
     <!-- BLOG Section  -->
     <div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">EVENTS AT THE FOOD HUT</h2>
+        <h2 class="section-title py-5">MENU OF THE DAY</h2>
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-4 mb-5">
                 <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
@@ -272,7 +300,7 @@
         </div>
     </div>
 
-    <!-- REVIEWS Section  -->
+    <!-- REVIEWS Section  
     <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
         <h2 class="section-title my-5 text-center">REVIEWS</h2>
         <div class="row mt-3 mb-5">
@@ -304,7 +332,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- CONTACT Section  -->
     <div id="contact" class="container-fluid bg-dark text-light border-top wow fadeIn">
